Fix T47060: Uv form dupli not working with Cycles when the hair/particles mesh has more than one uv sets.

In fact, it was not working with BI either - 'UV from dupli' would always take active UVLayer,
not render_active one.

Fixed now for both Cycles and BI, and for both particles and 'simple' dupli_face.